# bevy_quickmenu

./: Cargo.toml  Readme.md
examples/: custom.rs
src/: navigation_menu.rs  style.rs  systems.rs  types.rs
src/widgets/: button.rs  label.rs  widget.rs
